# quant-stack

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
config/: default.yaml  logging.yaml  settings.yaml
data/: current_positions.json
experiments/: agent_shadow_chat.py  agent_shadow_demo.py  compare_records.py  compare_sma_vs_buyhold.py  demo_tracking.py  demo_vbt_adapter.py  example_backtest.py  generate_baseline_summary.py  generate_report.py  portfolio_validation.py  registry.json  run_execution.py  sector_momentum_cost_study.py  sector_momentum_experiment.py  sector_momentum_ief_experiment.py  shadow_run.py  step6_compare_sma_vs_buyhold.py
experiments/20260422_113755_trend_momentum_top2_2479210b/: record.json  report.md
experiments/20260422_113834_trend_momentum_top2_5d664f6c/: record.json  report.md
lean/: SectorMomentumAlgorithm.py
reports/: 20260421_201119_sma_cross.md
src/quant_stack/: __init__.py  cli.py
tests/: conftest.py
tests/test_agent/: conftest.py  test_experiment_tracker.py  test_reporter.py
tests/test_core/: test_config.py  test_schemas.py
tests/test_data/: conftest.py  test_loaders.py  test_repository.py  test_stooq_eod.py  test_validation.py  test_yahoo_provider.py
tests/test_execution/: test_service.py  test_shadow.py  test_shadow_scenarios.py
tests/test_experiments/: test_shadow_run.py
tests/test_factors/: conftest.py  test_momentum.py  test_trend.py  test_volatility.py
tests/test_portfolio/: conftest.py  test_allocators.py
tests/test_research/: test_vbt_adapter.py
tests/test_signals/: conftest.py  test_momentum_signals.py  test_trend_signals.py
(+71 files in other folders)
